[package]
name = "islamic_prayer_times"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Not strictly necessary since it is assumed.
[[bin]]
path = "src/main.rs"
name = "islamic_prayer_times"

[dependencies]
float-cmp = "0.9.0"
chrono = "0.4.23"
