[package]
name = "islamic_prayer_times"
version = "1.0.0"
edition = "2021"
authors = ["Hammad Awan <hammad_awan@hotmail.com>"]
description = "A rust port of the Islamic Tools and Libraries (ITL) project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Not strictly necessary since it is assumed.
[[bin]]
path = "src/main.rs"
name = "islamic_prayer_times"

[dependencies]
float-cmp = "0.9.0"
chrono = "0.4.23"
clap = { version = "4.3.0", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
