[package]
name = "islamic_prayer_times"
version = "1.0.0"
edition = "2021"
authors = ["Hammad Awan <hammad_awan@hotmail.com>"]
description = "A rust port of the Islamic Tools and Libraries (ITL) project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Not strictly necessary since it is assumed.
[[bin]]
path = "src/main.rs"
name = "islamic_prayer_times"

[dependencies]
float-cmp = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
